fix(estils.css): delete property z-index

--- a/Ej1.2_Position/estils.css
+++ b/Ej1.2_Position/estils.css
@@ -9,9 +9,6 @@ div#imatges {
   height: 500px;
 
   position: relative;
-
-  /* CSS AL DAVALL */
-  z-index: -1;
 }
 
 p#titol {
